# talk_system

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  run.sh
common/: CMakeLists.txt  Makefile
common/base/: Any.h  CConfigFileReader.cc  CConfigFileReader.h  Logger.h  Semaphore.h  Task.cc  Task.h  Thread.cc  Thread.h  ThreadPool.cc  ThreadPool.h  async_log.cpp  async_log.h  current_thread.cpp  current_thread.h  noncopyable.h  simple_log.cpp  simple_log.h  thread.cpp  thread.h  time_stamp.cpp  time_stamp.h  util.cc  util.h
common/net/: Acceptor.h  Buffer.cc  EventLoop.cc  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.h  TcpConnection.cc  acceptor.cpp  acceptor.h  buffer.cpp  buffer.h  callbacks.h  channel.cpp  channel.h  deault_poller.cpp  epoll_poller.cpp  epoll_poller.h  event_loop.cpp  event_loop.h  eventloop_thread.cpp  eventloop_thread.h  eventloop_threadpool.cpp  eventloop_threadpool.h  inet_address.cpp  inet_address.h  poller.cpp  poller.h  socket.cpp  socket.h  tcp_connection.h  tcp_server.cpp  tcp_server.h
db_proxy_server/: CMakeLists.txt  CachePool.cc  CachePool.h  DBPool.cc  DBPool.h  DBServer.cc  DBServer.h  HandleMap.h  HanldeMap.cc  TcpSession.h  db_proxy_server.cc  dbproxyserver.conf
db_proxy_server/business/: Common.h  InterLogin.cc  InterlLogin.h  Login.h  LoginStrategy.h
example/test_log/: CMakeLists.txt  test_log.cpp
include/: businessmsg.h
include/pb/proto/: IM.BaseDefine.proto
include/protocol/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Buddy.pb.cc  IM.Group.pb.cc  IM.Message.pb.h  IM.Other.pb.h  IM.Server.pb.h  IM.SwitchService.pb.cc
msg_server/: CMakeLists.txt  chatserver.cpp  chatserver.h  main.cpp  msgserver.cpp  msgserver.h
msg_server/model/: user.h
msg_server/msgservice/: msgservice.h
pb/: IM.BaseDefine.proto  IM.Buddy.proto  IM.File.proto  IM.Login.proto  IM.Message.proto  IM.Other.proto  IM.Server.proto  IM.SwitchService.proto  create.sh
test/: CMakeLists.txt
test/echoserver/: CMakeLists.txt
test/json/: CMakeLists.txt  test_json.h
test/log/: CMakeLists.txt  test_log.cpp
test/test_redis/: CMakeLists.txt  main.cpp
test/threadpool/: CMakeLists.txt  main.cpp
